﻿sqlcon release notes

09/06/2017 v1.7.13.0
	Improvements/Enhancements:
	1. command export /c# uses current table name as class name 
	Bugs Fixes:
	1. command export /c# doesn't export UniqueIdentifier type column correctly.

06/27/2017 v1.7.12.0
	Improvements/Enhancements:
	1. command dir can match table name without dbo schema, for example, command>dir cust* can match dbo.cust* 
	Bugs Fixes:
	1. code builder doesn't generate attributes
	2. output of sqlcon cannot redirect when table displays.

05/19/2016 v1.7.11.0
	New Features:
	1. command>export /c# /ns:xxx /class:name /type:dict|[list] /out:path generate C# class of List<T> or Dictionary<T1,T2> data from last table result

04/27/2017 v1.7.10.0
	Bugs Fixes:
	1. cannot create 2+ foreign keys constraints pointing to the same primary key table 

01/25/2017 v1.7.9.0
	New Features:
	1. command>import file /ds /dt load xml file

01/24/2017 v1.7.8.0
	Improvements/Enhancements:
	1. improve command xcopy performance

11/30/2016 v1.7.7.0
	New Features:
	1. command>export /c# /ns:xxx /class:name /out:path generate C# class and data from last table result
	Bugs Fixes:
	1. cannot lauch editor application if defined editor application doesn't exist. use notepad.exe instead

10/20/2016 v1.7.6.0
	New Features:
	1. command>export /entity /ns:xxx /base:inheritance /out:path generate method CopyFrom, Compare, Clone for entity framrework classes
	2. command>export /save create template for IF EXISTS UPDATE ELSE INSERT 

9/20/2016 v1.7.5.0
	New Features:
	1. command>edit to launch query edit window, to edit, execute sql script
	2. configuration file can be loaded from clouds

9/12/2016 v1.7.4.0
	New Features:
	1. color schema of GUI table editor is configurable on sqlcon.cfg

8/24/2016 v1.7.3.0
	New Features:
	1. command>export /l2s to generate Linq to SQL C# class

8/19/2016 v1.7.2.1
	New Features:
	1. command>export /create supports wildcard to match table names

7/26/2016 v1.7.2.0
	New Features: