@@ -458,8 +458,6 @@ namespace sqlcon
                 stdio.WriteLine("   /t                  : display table in vertical grid");
                 stdio.WriteLine("   /r                  : display row-id");
                 stdio.WriteLine("   /json               : generate json data");
-                stdio.WriteLine("   /c#                 : generate C# data");
-                stdio.WriteLine("       [/class:name]   : class can be generated by command >export /dc1");
                 stdio.WriteLine("   /dup                : list duplicated rows, e.g. type /dup /col:c1,c2");
                 stdio.WriteLine("   /col:c1,c2,..       : display columns, or search on columns");
                 stdio.WriteLine("   /edit               : edit mode");
